[package]
name = "fiasco-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
json_compilation_db = "1.0"
jsonrpc-core = "18.0.0"
lazy_static = "1.5.0"
log = "0.4.27"
lsp-server = "0.7.8"
lsp-types = "0.94.1"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
tempfile = "3.20.0"
tungstenite = "0.27.0"
